# omnivoice

./: .env.example  .gitignore  CNAME  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt  robots.txt  setup_env.py  start.py  start_demo.sh
demo/: index.html  mock_server.py  option1-bento.html  option2-terminal.html  option3-glass.html  option4-minimal.html  option5-brutalist.html  simulation.html  simulation.jsx
docker/: Dockerfile  prometheus.yml
docker/grafana/provisioning/dashboards/: dashboards.yml
integrations/twilio/: README.md  __init__.py  voice_call_handler.py  whatsapp_webhook.py
omni_voice/: __init__.py  config.py  main.py  voice_cli.py
omni_voice/api/: __init__.py  routes.py  waitlist.py  websocket.py
omni_voice/asr/: deepgram.py  whisper_local.py
omni_voice/core/: __init__.py  aqal.py  atts.py  leaky_bucket.py  tab.py
omni_voice/llm/: anthropic.py  ollama.py  openai.py  openrouter.py
omni_voice/observability/: __init__.py  metrics.py
omni_voice/providers/: __init__.py  base.py
omni_voice/providers/asr/: deepgram.py  whisper.py  whisper_local.py
omni_voice/providers/llm/: anthropic.py  openai.py
omni_voice/providers/tts/: edge.py  openai.py
omni_voice/session/: __init__.py  manager.py
omni_voice/tts/: edge_tts.py  elevenlabs.py  openai_tts.py
sdk/: pyproject.toml
sdk/omni_voice_sdk/: __init__.py  client.py
static/: site.webmanifest  sitemap.xml
tests/unit/: test_atts.py  test_leaky_bucket.py  test_tab.py
