[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "omni-voice"
version = "0.1.0"
description = "Real-Time Voice AI Infrastructure Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "numpy>=1.26.0",
    "prometheus-client>=0.20.0",
    "python-dotenv>=1.0.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "deepgram-sdk>=3.2.0",
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.7",
    "scipy>=1.13.0",
    "structlog>=24.1.0",
    "asyncio-mqtt>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "hypothesis>=6.100.0",
]

[project.scripts]
omni-voice = "omni_voice.main:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
