[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "omni-voice-sdk"
version = "0.1.0"
description = "Python SDK for the Omni Voice real-time voice AI platform"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
audio = [
    "sounddevice>=0.4.7",
]

[tool.setuptools.packages.find]
where = ["."]
